# ytmusic

./: .gitignore  README.md  oauth.json.sample  pyproject.toml
src/ytmusic/: __init__.py  ytmusic.py
