[project]
name = "ytmusic"
version = "0.1.0"
description = "Random play song from YouTube Music liked songs"
authors = [
    { name = "meliber", email = "bigwhitely@gmail.com" }
]
dependencies = [
    "ytmusicapi~=1.1.0",
    "python-mpv~=1.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
